# simple-gh-updater

./: Cargo.toml  README.md
src/: main.rs
