[package]
name = "simple-gh-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
indicatif = "0.17.6"
reqwest = "0.11.18"
tokio = { version = "1.30.0", features = ["full"] }
zip = "0.6.6"
